# python-project-52

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: test-check.yml
fixtures/: labels_td.json  statuses_td.json  users_td.json
labels/: forms.py  models.py  urls.py  views.py
labels/migrations/: 0001_initial.py
labels/templates/labels/: labels_index.html
labels/tests/: test_base.py  test_forms.py  test_models.py  test_views.py
main/: forms.py  mixins.py  urls.py  views.py
main/templates/: layout.html
main/templates/main/: delete_form.html  form.html  index.html  login.html
statuses/: forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
statuses/templates/statuses/: statuses_index.html
statuses/tests/: test_base.py  test_forms.py  test_models.py  test_views.py
task_manager/: settings.py  urls.py
task_manager/fixtures/: tasks_td.json
task_manager/labels/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/tests/: test_base.py  test_forms.py  test_models.py  test_views.py
task_manager/main/: mixins.py  urls.py  views.py
task_manager/statuses/: admin.py  forms.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/statuses/tests/: test_base.py  test_forms.py  test_models.py  test_views.py
task_manager/tasks/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_initial.py
task_manager/tasks/tests/: test_base.py  test_conneted_data_deletion.py  test_forms.py  test_models.py  test_views.py
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
task_manager/users/tests/: test_base.py  test_forms.py
tasks/: admin.py  forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_initial.py  0002_rename_label_task_labels.py
tasks/templates/tasks/: delete_task.html  (+2 more)
tasks/tests/: test_base.py  test_conneted_data_deletion.py  test_forms.py  test_models.py  test_views.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/tests/: test_base.py  test_forms.py  test_models.py
users/tests_users/: test_forms.py  test_views.py
(+9 files in other folders)
